# literature-rag-mcp

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-04-literature-rag-mcp-design.md  2026-03-04-literature-rag-mcp-implementation.md
src/literature_rag_mcp/: __init__.py  chroma_client.py  cli.py  config.py  embedding_utils.py  server.py  web_server.py
src/literature_rag_mcp/parsers/: base.py  prebuilt_md.py
src/literature_rag_mcp/rag/: chunker_types.py  chunkers.py  reference_parser.py  reranker.py  retriever.py
src/literature_rag_mcp/sources/: base.py  zotero_local.py
src/pdf2md/: README.md  __init__.py  __main__.py  analyze_errors.py  cleanup_attachments.py  converter.py  download_pdfs.py  get_error_titles.py  markitdown.py  run.sh
tests/: test_config.py  test_embedding_utils.py
tests/parsers/: test_markitdown_pdf.py  test_prebuilt_md.py
tests/rag/: test_retriever.py
tests/sources/: test_zotero_local.py
web/: package-lock.json
web/src/: App.tsx  index.css
